<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_browse_services"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_browse_services" />
    <!-- Improvement: Added "Offer Services" item -->
    <item
        android:id="@+id/navigation_offer_services"
        android:icon="@drawable/ic_list_teal_48dp"
        android:title="@string/title_offer_services" />
    <!-- Improvement: Renamed "Account" to "Profile" for clarity, assuming it leads to the user's profile -->
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_profile" />
    <!-- Improvement: Combined About Us and Contact into one item as per your description -->
    <item
        android:id="@+id/navigation_about_contact"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/title_about_contact" />
</menu>

