<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/warm_grey">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_blue"
        android:clipToOutline="true"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/logo_text_container"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/get_started_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="1">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginBottom="2dp"
                android:contentDescription="@string/hustlehub_logo_description"
                android:src="@drawable/ic_hustlehub_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="48sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tagline"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <Button
            android:id="@+id/get_started_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:background="@color/soft_orange"
            android:paddingStart="48dp"
            android:paddingTop="16dp"
            android:paddingEnd="48dp"
            android:paddingBottom="16dp"
            android:text="@string/get_started"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:cornerRadius="999dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:drawableEnd="@drawable/ic_arrow_forward"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:elevation="6dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
